--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -9,5 +9,19 @@
   "
 >
   <h1>Homepage</h1>
+  {% if admin %}
+  <p><a href="{{ url_for('homepage') }}">Página Sobre (Acesso Restrito)</a></p>
+
+  <h3>Promover Usuário</h3>
+  <form method="POST" action="{{ url_for('promote') }}" id="promote-form">
+    <label for="user_id">Escolha um Usuário:</label>
+    <select name="user_id" id="user_id">
+      {% for user in users %}
+      <option value="{{ user.id }}">{{ user.username }}</option>
+      {% endfor %}
+    </select>
+    <button type="submit">Promover a Administrador</button>
+  </form>
+  {% endif %}
 </main>
 {%endblock%}
