--- a/app/templates/criarconta.html
+++ b/app/templates/criarconta.html
@@ -26,8 +26,7 @@
           <div class="errorJS"></div>
         </div>
         <div class="divInput">
-          {{ form_criar_conta.email(type="email", id="email", placeholder="Seu
-          e-mail...") }}
+          {{ form_criar_conta.email(type="email", id="email", placeholder="Seu e-mail...") }}
           <div class="errorJS"></div>
           {% for error in form_criar_conta.email.errors %}
           <div id="errorFlask">
