--- a/app/static/css/formLogin.css
+++ b/app/static/css/formLogin.css
@@ -44,7 +44,7 @@ main {
       }
       & p {
         font-size: 1.6rem;
-        color: #0c0c0c;
+        color: #fff;
         font-weight: 500;
         margin-bottom: 3rem;
         text-align: justify;
@@ -76,7 +76,7 @@ main {
           padding: 1rem;
           font-size: 1.6rem;
           outline: none;
-          color: #0c0c0c;
+          color: #fff;
           background-color: transparent;
         }
         & #togglePassword {
@@ -86,6 +86,8 @@ main {
           margin-right: 1rem;
           & svg {
             cursor: pointer;
+            width: 4rem;
+            height: 4rem;
           }
         }
         & .errorJS {
@@ -120,35 +122,40 @@ main {
       & .submitResquest {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         width: 100%;
+        margin-top: 5rem;
         & #btn_submit_login {
           border: none;
-          color: white;
-          background-color: #0c0c0c;
+          color: #0c0c0c;
+          background-color: #fff;
+          border: 2px solid #fff;
           font-size: 2rem;
           font-weight: 900;
           text-transform: uppercase;
           font-family: "Montserrat", sans-serif;
           padding: 1rem 2rem;
           border-radius: 3rem;
-          margin-top: 2rem;
-          margin-bottom: 4rem;
           width: max-content;
+          cursor: pointer;
+          transition: 300ms ease;
+          &:hover {
+            background-color: #0c0c0c;
+            color: #fff;
+          }
         }
       }
-    }
-    & .createCount {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 3rem;
-      align-self: center;
-      & h4 {
-        font-size: 1.6rem;
-        font-weight: 600;
-        & a {
-          color: #62875a !important;
+      & .createCount {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        & h4 {
+          font-size: 1.6rem;
+          font-weight: 600;
+          & a {
+            color: #62875a !important;
+          }
         }
       }
     }
