--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
       rel="icon"
       href="{{ url_for('static', filename='assets/favicon.ico') }}"
       type="image/x-icon"
@@ -30,13 +34,23 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <title>Agenda</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+      rel="stylesheet"
+    />
 
     {% block head %} {% endblock %}
   </head>
   <div id="divLogout" class="divLogout none">
-    <img src="../static/assets/logo.svg" alt="" />
     <p>Deseja sair da sua conta?</p>
     <div class="divQuestion">
       <p href="" class="not" id="not">
@@ -70,29 +84,9 @@
     </div>
   </div>
   <body>
-    <!-- ESTE with RETORNA MENSAGENS DE ERROS E AVISOS FLASH, AVISOS DE LOGIN, CADASTROS E LOGOUT -->
-    <!-- {% with messages = get_flashed_messages(with_categories=True) %} {% if
-    messages %}
-    <ul class="flashes">
-      {% for category, message in messages %}
-      <li class="error">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          height="24px"
-          viewBox="0 -960 960 960"
-          width="24px"
-          fill="#e8eaed"
-        >
-          <path
-            d="M480.33-303.08q7.59 0 13.02-5.44 5.42-5.44 5.42-13.21v-179.39q0-7.32-5.48-12.79-5.48-5.47-12.82-5.47-7.78 0-13.2 5.47-5.42 5.47-5.42 12.79v179.39q0 7.77 5.45 13.21 5.45 5.44 13.03 5.44Zm-.44-271.38q10.34 0 16.92-6.47 6.57-6.48 6.57-16.81 0-10.34-6.47-16.91-6.47-6.58-16.8-6.58-10.34 0-16.92 6.47-6.57 6.47-6.57 16.81 0 10.33 6.47 16.91t16.8 6.58Zm.29 448.31q-73.39 0-138.06-27.89t-112.51-75.69q-47.84-47.81-75.65-112.29-27.81-64.48-27.81-137.8 0-73.39 27.89-138.06t75.69-112.51q47.81-47.84 112.29-75.65 64.48-27.81 137.8-27.81 73.39 0 138.06 27.89t112.51 75.69q47.84 47.8 75.65 112.29 27.81 64.48 27.81 137.8 0 73.39-27.89 138.06t-75.69 112.51q-47.8 47.84-112.29 75.65-64.48 27.81-137.8 27.81Zm-.21-36.93q132.3 0 224.63-92.3 92.32-92.3 92.32-224.59 0-132.3-92.3-224.63-92.3-92.32-224.59-92.32-132.3 0-224.63 92.3-92.32 92.3-92.32 224.59 0 132.3 92.3 224.63 92.3 92.32 224.59 92.32ZM480-480Z"
-          />
-        </svg>
-        {{ message }}
-      </li>
-      {% endfor %}
-    </ul>
-    {% endif %} {% endwith %}  -->
     {% block body %} {% endblock %}
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <script src="{{url_for('static', filename='js/logout.js')}}"></script>
 </html>
