--- a/app/templates/criarconta.html
+++ b/app/templates/criarconta.html
@@ -8,9 +8,7 @@
   rel="stylesheet"
 />
 
-{%endblock%} 
-{%block body%} ]
-{%include 'navbar.html'%}
+{%endblock%} {%block body%}  {%include 'navbarOut.html'%}
 <main>
   <section class="col1">
     <div class="header">
@@ -54,27 +52,27 @@
         <div id="togglePassword">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            height="26px"
+            height="24px"
             viewBox="0 -960 960 960"
-            width="26px"
-            fill="#656565"
+            width="24px"
+            fill="#aaa"
             id="passwordClose"
           >
             <path
-              d="M607-627q29 29 42.5 66t9.5 76q0 15-11 25.5T622-449q-15 0-25.5-10.5T586-485q5-26-3-50t-25-41q-17-17-41-26t-51-4q-15 0-25.5-11T430-643q0-15 10.5-25.5T466-679q38-4 75 9.5t66 42.5Zm-127-93q-19 0-37 1.5t-36 5.5q-17 3-30.5-5T358-742q-5-16 3.5-31t24.5-18q23-5 46.5-7t47.5-2q137 0 250.5 72T904-534q4 8 6 16.5t2 17.5q0 9-1.5 17.5T905-466q-18 40-44.5 75T802-327q-12 11-28 9t-26-16q-10-14-8.5-30.5T753-392q24-23 44-50t35-58q-50-101-144.5-160.5T480-720Zm0 520q-134 0-245-72.5T60-463q-5-8-7.5-17.5T50-500q0-10 2-19t7-18q20-40 46.5-76.5T166-680l-83-84q-11-12-10.5-28.5T84-820q11-11 28-11t28 11l680 680q11 11 11.5 27.5T820-84q-11 11-28 11t-28-11L624-222q-35 11-71 16.5t-73 5.5ZM222-624q-29 26-53 57t-41 67q50 101 144.5 160.5T480-280q20 0 39-2.5t39-5.5l-36-38q-11 3-21 4.5t-21 1.5q-75 0-127.5-52.5T300-500q0-11 1.5-21t4.5-21l-84-82Zm319 93Zm-151 75Z"
+              d="M576-596q17 17 30 48.5t11 60.5q0 6-4 10t-10 4q-6 0-10-4t-4-10q2-27-6.5-50T557-577q-17-17-41-25.5t-50-5.5q-6 1-11-2.5t-6-9.5q-1-6 2.5-11t9.5-6q30-4 62.5 8.5T576-596Zm-96-124q-25 0-49.5 3t-48.5 9q-6 2-11-1.5t-7-8.5q-2-6 1-10.5t9-6.5q26-7 52.5-10t53.5-3q116 0 215 59t154 161q4 7 5.5 13.5T856-500q0 8-1.5 14.5T849-472q-19 36-45 66.5T747-349q-5 4-10.5 3.5T727-351q-4-5-3-10t6-9q32-27 58-59.5t44-70.5q-50-101-144.5-160.5T480-720Zm0 468q-114 0-210-59.5T115-469q-5-7-7-15t-2-16q0-8 2-16t7-15q26-42 57-79.5t72-65.5L142-778q-4-4-4.5-9.5T142-798q5-5 10-5t10 5l636 636q4 4 4.5 9.5T798-142q-5 5-10 5t-10-5L636-284q-36 18-75.5 25t-80.5 7ZM264-656q-45 29-79.5 68.5T128-500q50 101 144.5 160.5T480-280q35 0 69.5-5t66.5-19l-74-74q-14 9-29.5 11.5T480-364q-57 0-96.5-39.5T344-500q0-17 3-32.5t11-29.5l-94-94Zm277 125Zm-101 51Z"
             />
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            height="26px"
+            height="24px"
             viewBox="0 -960 960 960"
-            width="26px"
-            fill="#656565"
+            width="24px"
+            fill="#aaa"
             id="passwordOpen"
             class="none"
           >
             <path
-              d="M480-320q75 0 127.5-52.5T660-500q0-75-52.5-127.5T480-680q-75 0-127.5 52.5T300-500q0 75 52.5 127.5T480-320Zm0-72q-45 0-76.5-31.5T372-500q0-45 31.5-76.5T480-608q45 0 76.5 31.5T588-500q0 45-31.5 76.5T480-392Zm0 192q-134 0-244.5-72T61-462q-5-9-7.5-18.5T51-500q0-10 2.5-19.5T61-538q64-118 174.5-190T480-800q134 0 244.5 72T899-538q5 9 7.5 18.5T909-500q0 10-2.5 19.5T899-462q-64 118-174.5 190T480-200Zm0-300Zm0 220q113 0 207.5-59.5T832-500q-50-101-144.5-160.5T480-720q-113 0-207.5 59.5T128-500q50 101 144.5 160.5T480-280Z"
+              d="M480.24-364q56.76 0 96.26-39.74 39.5-39.73 39.5-96.5 0-56.76-39.74-96.26-39.73-39.5-96.5-39.5-56.76 0-96.26 39.74-39.5 39.73-39.5 96.5 0 56.76 39.74 96.26 39.73 39.5 96.5 39.5Zm-.24-28q-45 0-76.5-31.5T372-500q0-45 31.5-76.5T480-608q45 0 76.5 31.5T588-500q0 45-31.5 76.5T480-392Zm0 140q-114 0-209.5-60T115-469q-5-8-7-15.55-2-7.55-2-15.5t2-15.45q2-7.5 7-15.5 60-97 155.5-157T480-748q114 0 209.5 60T845-531q5 8 7 15.55 2 7.55 2 15.5t-2 15.45q-2 7.5-7 15.5-60 97-155.5 157T480-252Zm0-248Zm0 220q113 0 207.5-59.5T832-500q-50-101-144.5-160.5T480-720q-113 0-207.5 59.5T128-500q50 101 144.5 160.5T480-280Z"
             />
           </svg>
         </div>
@@ -85,30 +83,10 @@
         <div class="errorJS"></div>
 
         <div id="togglePasswordConfirm">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="26px"
-            viewBox="0 -960 960 960"
-            width="26px"
-            fill="#656565"
-            id="passwordConfirmClose"
-          >
-            <path
-              d="M607-627q29 29 42.5 66t9.5 76q0 15-11 25.5T622-449q-15 0-25.5-10.5T586-485q5-26-3-50t-25-41q-17-17-41-26t-51-4q-15 0-25.5-11T430-643q0-15 10.5-25.5T466-679q38-4 75 9.5t66 42.5Zm-127-93q-19 0-37 1.5t-36 5.5q-17 3-30.5-5T358-742q-5-16 3.5-31t24.5-18q23-5 46.5-7t47.5-2q137 0 250.5 72T904-534q4 8 6 16.5t2 17.5q0 9-1.5 17.5T905-466q-18 40-44.5 75T802-327q-12 11-28 9t-26-16q-10-14-8.5-30.5T753-392q24-23 44-50t35-58q-50-101-144.5-160.5T480-720Zm0 520q-134 0-245-72.5T60-463q-5-8-7.5-17.5T50-500q0-10 2-19t7-18q20-40 46.5-76.5T166-680l-83-84q-11-12-10.5-28.5T84-820q11-11 28-11t28 11l680 680q11 11 11.5 27.5T820-84q-11 11-28 11t-28-11L624-222q-35 11-71 16.5t-73 5.5ZM222-624q-29 26-53 57t-41 67q50 101 144.5 160.5T480-280q20 0 39-2.5t39-5.5l-36-38q-11 3-21 4.5t-21 1.5q-75 0-127.5-52.5T300-500q0-11 1.5-21t4.5-21l-84-82Zm319 93Zm-151 75Z"
-            />
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="26px"
-            viewBox="0 -960 960 960"
-            width="26px"
-            fill="#656565"
-            id="passwordConfirmOpen"
-            class="none"
-          >
-            <path
-              d="M480-320q75 0 127.5-52.5T660-500q0-75-52.5-127.5T480-680q-75 0-127.5 52.5T300-500q0 75 52.5 127.5T480-320Zm0-72q-45 0-76.5-31.5T372-500q0-45 31.5-76.5T480-608q45 0 76.5 31.5T588-500q0 45-31.5 76.5T480-392Zm0 192q-134 0-244.5-72T61-462q-5-9-7.5-18.5T51-500q0-10 2.5-19.5T61-538q64-118 174.5-190T480-800q134 0 244.5 72T899-538q5 9 7.5 18.5T909-500q0 10-2.5 19.5T899-462q-64 118-174.5 190T480-200Zm0-300Zm0 220q113 0 207.5-59.5T832-500q-50-101-144.5-160.5T480-720q-113 0-207.5 59.5T128-500q50 101 144.5 160.5T480-280Z"
-            />
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#aaa"   id="passwordConfirmClose"><path d="M576-596q17 17 30 48.5t11 60.5q0 6-4 10t-10 4q-6 0-10-4t-4-10q2-27-6.5-50T557-577q-17-17-41-25.5t-50-5.5q-6 1-11-2.5t-6-9.5q-1-6 2.5-11t9.5-6q30-4 62.5 8.5T576-596Zm-96-124q-25 0-49.5 3t-48.5 9q-6 2-11-1.5t-7-8.5q-2-6 1-10.5t9-6.5q26-7 52.5-10t53.5-3q116 0 215 59t154 161q4 7 5.5 13.5T856-500q0 8-1.5 14.5T849-472q-19 36-45 66.5T747-349q-5 4-10.5 3.5T727-351q-4-5-3-10t6-9q32-27 58-59.5t44-70.5q-50-101-144.5-160.5T480-720Zm0 468q-114 0-210-59.5T115-469q-5-7-7-15t-2-16q0-8 2-16t7-15q26-42 57-79.5t72-65.5L142-778q-4-4-4.5-9.5T142-798q5-5 10-5t10 5l636 636q4 4 4.5 9.5T798-142q-5 5-10 5t-10-5L636-284q-36 18-75.5 25t-80.5 7ZM264-656q-45 29-79.5 68.5T128-500q50 101 144.5 160.5T480-280q35 0 69.5-5t66.5-19l-74-74q-14 9-29.5 11.5T480-364q-57 0-96.5-39.5T344-500q0-17 3-32.5t11-29.5l-94-94Zm277 125Zm-101 51Z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#aaa"  id="passwordConfirmOpen"
+          class="none"><path d="M480.24-364q56.76 0 96.26-39.74 39.5-39.73 39.5-96.5 0-56.76-39.74-96.26-39.73-39.5-96.5-39.5-56.76 0-96.26 39.74-39.5 39.73-39.5 96.5 0 56.76 39.74 96.26 39.73 39.5 96.5 39.5Zm-.24-28q-45 0-76.5-31.5T372-500q0-45 31.5-76.5T480-608q45 0 76.5 31.5T588-500q0 45-31.5 76.5T480-392Zm0 140q-114 0-209.5-60T115-469q-5-8-7-15.55-2-7.55-2-15.5t2-15.45q2-7.5 7-15.5 60-97 155.5-157T480-748q114 0 209.5 60T845-531q5 8 7 15.55 2 7.55 2 15.5t-2 15.45q-2 7.5-7 15.5-60 97-155.5 157T480-252Zm0-248Zm0 220q113 0 207.5-59.5T832-500q-50-101-144.5-160.5T480-720q-113 0-207.5 59.5T128-500q50 101 144.5 160.5T480-280Z"/></svg>
+         
           </svg>
         </div>
       </div>
@@ -118,14 +96,15 @@
           form_criar_conta.btn_submit_criar_conta(id="btn_submit_criar_conta")
           }}
         </div>
+        <div class="createCount">
+          <h4>
+            Já possui conta?
+            <a href="{{ url_for('login') }}">Entre por aqui</a>
+          </h4>
+        </div>
       </div>
     </form>
-    <div class="createCount">
-      <h4>
-        Já possui conta?
-        <a href="{{ url_for('login') }}">Entre por aqui</a>
-      </h4>
-    </div>
+   
   </section>
 </main>
 <script src="{{ url_for('static', filename='js/' ~ visualizarSenhaCriarConta.js) }}"></script>
