--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,25 +1,78 @@
 <header class="container-header">
-  <nav id="navation">
-    <div class="logoHeader"></div>
-    <ul>
-      {% if current_user.is_authenticated %}
-          {% if current_user.is_admin %}
-              <li><a href="{{url_for('admin')}}">Admin</a></li>
-              <li><a href="{{url_for('agenda')}}">Agenda</a></li>
-          {%else%}
-              <li><a href="{{url_for('homepage')}}">Início</a></li>
-          {%endif%}
-     {% endif %}
-    </ul>
-  </nav>
-  <div id="perfil">
-    <ul>
-      {% if current_user.is_authenticated %}
-      <li id="logout">Logout</li>
-      {% else %}
-      <li><a href="{{url_for('login')}}">Login</a></li>
-      <li><a href="{{url_for('criarconta')}}">Criar conta</a></li>
-      {% endif %}
-    </ul>
+  <div class="logoHeader">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="24px"
+      viewBox="0 -960 960 960"
+      width="24px"
+      fill="#fff"
+    >
+      <path
+        d="M676.15-855q57.93.39 98.96 41.23 41.04 40.85 41.04 98.77 0 10.23-1.31 27.96-1.3 17.73-4.3 41.35l-55.39 403Q751.31-212 727.58-193q-23.73 19-54.43 19-19.53 0-35.38-9.42-15.85-9.43-26.92-24.74L498.08-366.85q-3.16-4.77-8.04-7.23-4.89-2.46-11.04-2.46-5.54 0-19.08 11.69L350.15-211.16q-12.07 16.54-28.92 26.85Q304.38-174 284.85-174q-30.7 0-53.93-19.5t-27.07-50.19l-54.39-402q-3-23.62-4.3-41.35-1.31-17.73-1.31-27.96 0-57.92 41.04-98.96Q225.92-855 283.85-855q32.53 0 53.65 9.5 21.12 9.5 41.12 20.5 20 11 43.07 20.5Q444.77-795 480-795q35.62 0 58.88-9.5 23.27-9.5 43.27-20.5 20-11 41.23-20.5 21.24-9.5 52.77-9.5Zm0 60q-23 0-40.5 9.5T597.54-765q-20.62 11-47.85 20.5T480-735q-41.69 0-68.92-9.5-27.23-9.5-47.85-20.5-20.61-11-38.5-20.5-17.88-9.5-40.88-9.5-33 0-56.5 23.5t-23.5 56.5q0 8 1 23t4 35l55 405q1 8 7 12.5t14 4.5q6.15 0 10.73-3.73 4.57-3.73 7.73-8.89l107.15-151.07q12.08-16.93 30.23-27.39 18.16-10.46 39.31-10.46 20.77 0 39.11 10.46 18.35 10.46 30.43 27.39l108.77 154.07q3.15 4.16 6.73 7.39 3.57 3.23 9.11 3.23 8 0 14.5-4.5t7.5-12.5l55-406q3-20 4-35t1-23q0-33-23.5-56.5t-56.5-23.5ZM480-515Z"
+      />
+    </svg>
+    <h2>ODONTO`BONNI</h2>
   </div>
 </header>
+<div class="divNav">
+  <nav id="navation">
+    <div class="logo">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="24px"
+        viewBox="0 -960 960 960"
+        width="24px"
+        fill="#fff"
+      >
+        <path
+          d="M676.15-855q57.93.39 98.96 41.23 41.04 40.85 41.04 98.77 0 10.23-1.31 27.96-1.3 17.73-4.3 41.35l-55.39 403Q751.31-212 727.58-193q-23.73 19-54.43 19-19.53 0-35.38-9.42-15.85-9.43-26.92-24.74L498.08-366.85q-3.16-4.77-8.04-7.23-4.89-2.46-11.04-2.46-5.54 0-19.08 11.69L350.15-211.16q-12.07 16.54-28.92 26.85Q304.38-174 284.85-174q-30.7 0-53.93-19.5t-27.07-50.19l-54.39-402q-3-23.62-4.3-41.35-1.31-17.73-1.31-27.96 0-57.92 41.04-98.96Q225.92-855 283.85-855q32.53 0 53.65 9.5 21.12 9.5 41.12 20.5 20 11 43.07 20.5Q444.77-795 480-795q35.62 0 58.88-9.5 23.27-9.5 43.27-20.5 20-11 41.23-20.5 21.24-9.5 52.77-9.5Zm0 60q-23 0-40.5 9.5T597.54-765q-20.62 11-47.85 20.5T480-735q-41.69 0-68.92-9.5-27.23-9.5-47.85-20.5-20.61-11-38.5-20.5-17.88-9.5-40.88-9.5-33 0-56.5 23.5t-23.5 56.5q0 8 1 23t4 35l55 405q1 8 7 12.5t14 4.5q6.15 0 10.73-3.73 4.57-3.73 7.73-8.89l107.15-151.07q12.08-16.93 30.23-27.39 18.16-10.46 39.31-10.46 20.77 0 39.11 10.46 18.35 10.46 30.43 27.39l108.77 154.07q3.15 4.16 6.73 7.39 3.57 3.23 9.11 3.23 8 0 14.5-4.5t7.5-12.5l55-406q3-20 4-35t1-23q0-33-23.5-56.5t-56.5-23.5ZM480-515Z"
+        />
+      </svg>
+    </div>
+    <ul>
+      {% if current_user.is_authenticated %} {% if current_user.is_admin %}
+      <li>
+        <a href="{{url_for('admin')}}">
+          <i class="bi bi-database"></i>
+        </a>
+      </li>
+      <li>
+        <a href="{{url_for('homepage')}}"><i class="bx bx-home-alt-2"></i></a>
+      </li>
+      {%else%}
+      <li>
+        <a href="{{url_for('homepage')}}">
+          <i class="bi bi-house"></i>
+        </a>
+      </li>
+      {%endif%} {%else%}
+      <li>
+        <a href="{{url_for('homepage')}}">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-house"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"
+            />
+          </svg>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+
+    <div id="perfil">
+      <ul>
+        {% if current_user.is_authenticated %}
+        <li id="logout">
+          <i class="bi bi-door-open"></i>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+</div>
