--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -453,8 +453,8 @@
       <h1>Odonto` Bonni</h1>
       <p>Organize seu tempo</p>
       <div class="buttons">
-        <button>Ver mais</button>
-        <button>Acessar</button>
+        <button><a href="{{url_for('login')}}">Ver mais</a></button>
+        <button><a href="{{url_for('login')}}">Acessar</a></button>
       </div>
     </div>
     <div class="col2"></div>
