alguns ajustes adicionais

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -302,7 +302,7 @@
         </ul>
 
         <ul id="consultas" class="listaPedidos">
-          {% for consulta in consultas %}
+          {% for consulta in consultasPorUsuario %}
           <li>
             <svg
               xmlns="http://www.w3.org/2000/svg"
