--- a/app/templates/navbarOut.html
+++ b/app/templates/navbarOut.html
@@ -1,3 +1,6 @@
+<!-- ESSA NAVBAR É RETORNADA QUANDO O USUÁRIO NÃO ESTÁ LOGADO -->
+
+
 <header class="navbarOut">
   <div class="logoHeader">
     <svg
